# experiment_matsuzawa_250929

./: pyproject.toml
.github/workflows/: prepare_images_for_html.yml  run_experiment_with_claude_code.yml
.research/: research_history.json
.research/iteration1/: error.txt  output.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code.txt  validate_experiment_code_exp-1.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_experimental_info_1.txt  extract_experimental_info_10.txt  extract_experimental_info_11.txt  extract_experimental_info_13.txt  extract_experimental_info_14.txt  extract_experimental_info_15.txt  extract_experimental_info_17.txt  extract_experimental_info_18.txt  extract_experimental_info_19.txt  extract_experimental_info_2.txt  extract_experimental_info_21.txt  extract_experimental_info_22.txt  extract_experimental_info_23.txt  extract_experimental_info_24.txt  extract_experimental_info_3.txt  extract_experimental_info_4.txt  extract_experimental_info_5.txt  extract_experimental_info_6.txt  (+25 more)
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+33 files in other folders)
