[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common-core-foundation"
version = "0.1.0"
description = "Unified experimental framework for SA-PASHA vs baselines"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "tensorboard>=2.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "datasets>=2.14",            # â† added for HF dataset loading
]

[tool.setuptools.packages.find]
where = ["src"]
